versioned_docs/version-0.26.0/api/web/index.md
# @fishjam-cloud/react-client

React client SDK for building web video and audio apps with Fishjam.

## Connection

- [useConnection](functions/useConnection.md)
- [useDataChannel](functions/useDataChannel.md)
- [usePeers](functions/usePeers.md)
- [useUpdatePeerMetadata](functions/useUpdatePeerMetadata.md)
- [useVAD](functions/useVAD.md)
- [Metadata](type-aliases/Metadata.md)

## Devices

- [useCamera](functions/useCamera.md)
- [useInitializeDevices](functions/useInitializeDevices.md)
- [useMicrophone](functions/useMicrophone.md)
- [useScreenShare](functions/useScreenShare.md)

## Components

- [FishjamProvider](functions/FishjamProvider.md)
- [FishjamProviderProps](interfaces/FishjamProviderProps.md)

## Livestream

- [useLivestreamStreamer](functions/useLivestreamStreamer.md)
- [useLivestreamViewer](functions/useLivestreamViewer.md)
- [UseLivestreamStreamerResult](interfaces/UseLivestreamStreamerResult.md)
- [UseLivestreamViewerResult](interfaces/UseLivestreamViewerResult.md)
- [ConnectStreamerConfig](type-aliases/ConnectStreamerConfig.md)
- [StreamerInputs](type-aliases/StreamerInputs.md)

## Other

- [useCustomSource](functions/useCustomSource.md)
- [useSandbox](functions/useSandbox.md)
- [Variant](enumerations/Variant.md)
- [DataChannelOptions](interfaces/DataChannelOptions.md)
- [JoinRoomConfig](interfaces/JoinRoomConfig.md)
- [SimulcastConfig](interfaces/SimulcastConfig.md)
- [AuthErrorReason](type-aliases/AuthErrorReason.md)
- [BandwidthLimits](type-aliases/BandwidthLimits.md)
- [Brand](type-aliases/Brand.md)
- [ConnectViewerConfig](type-aliases/ConnectViewerConfig.md)
- [CustomSource](type-aliases/CustomSource.md)
- [DataCallback](type-aliases/DataCallback.md)
- [DeviceError](type-aliases/DeviceError.md)
- [DeviceItem](type-aliases/DeviceItem.md)
- [InitializeDevicesResult](type-aliases/InitializeDevicesResult.md)
- [InitializeDevicesSettings](type-aliases/InitializeDevicesSettings.md)
- [InitializeDevicesStatus](type-aliases/InitializeDevicesStatus.md)
- [JoinErrorReason](type-aliases/JoinErrorReason.md)
- [MiddlewareResult](type-aliases/MiddlewareResult.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerStatus](type-aliases/PeerStatus.md)
- [PeerWithTracks](type-aliases/PeerWithTracks.md)
- [PersistLastDeviceHandlers](type-aliases/PersistLastDeviceHandlers.md)
- [ReconnectConfig](type-aliases/ReconnectConfig.md)
- [ReconnectionStatus](type-aliases/ReconnectionStatus.md)
- [RemoteTrack](type-aliases/RemoteTrack.md)
- [RoomType](type-aliases/RoomType.md)
- [SimulcastBandwidthLimit](type-aliases/SimulcastBandwidthLimit.md)
- [SimulcastBandwidthLimits](type-aliases/SimulcastBandwidthLimits.md)
- [StreamConfig](type-aliases/StreamConfig.md)
- [Track](type-aliases/Track.md)
- [TrackBandwidthLimit](type-aliases/TrackBandwidthLimit.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMiddleware](type-aliases/TrackMiddleware.md)
- [TracksMiddleware](type-aliases/TracksMiddleware.md)
- [TracksMiddlewareResult](type-aliases/TracksMiddlewareResult.md)
- [UseDataChannelResult](type-aliases/UseDataChannelResult.md)
- [UseInitializeDevicesParams](type-aliases/UseInitializeDevicesParams.md)
- [UseSandboxProps](type-aliases/UseSandboxProps.md)
- [SimulcastConfig](variables/SimulcastConfig.md)
